Setup i18n on index page
Enable URL Shortener index page to be provided in 3 languages:
English, Portuguese and German

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,10 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  english: English
+  enter-url: Enter an URL to be shortened
+  example-url: https://www.example.com
+  german: German
+  portuguese: Portuguese
+  submit: Make it short
+  url-shortener: URL Shortener
