Apply i18n to react Form component
Ensure the form component is available for the same languages that
the Rails app is supported (at the moment: Portuguese, German and
English)

--- a/config/locales/views/home.de.yml
+++ b/config/locales/views/home.de.yml
@@ -6,5 +6,6 @@ de:
       example-url: https://www.beispiel.de
       german: Deutsche
       portuguese: Portugiesisch
+      submission-error: Geben Sie eine gültige URL ein und versuchen Sie es erneut.
       submit: Kürzen
       url-shortener: URL Kürzer
